--- a/README.adoc
+++ b/README.adoc
@@ -10,3 +10,5 @@ The Manda being existence embodied in the continual conflict to survive.
 We thank the Manda for showing where we are weak, and how we must improve to be strong.
 
 include::creeds/first_creed.adoc[]
+
+include::creeds/proposed/creeds.adoc[]
