--- a/creeds/proposed/creeds.adoc
+++ b/creeds/proposed/creeds.adoc
@@ -104,3 +104,7 @@ The temptations of Arasuum
 ....
 The soldier gives no quarter in their battles.
 ....
+
+....
+It is better to be a warrior in a garden than a gardener in a war.
+....
