--- a/creeds/proposed/creeds.adoc
+++ b/creeds/proposed/creeds.adoc
@@ -108,3 +108,7 @@ The soldier gives no quarter in their battles.
 ....
 It is better to be a warrior in a garden than a gardener in a war.
 ....
+
+....
+Take care of your tools and they'll take care of you.
+....
