Removed reference to Mandalorian

--- a/creeds/first_creed.adoc
+++ b/creeds/first_creed.adoc
@@ -27,8 +27,8 @@ Thought and distinction gives rise to rationality and emotion.
 Emotion to motivate action.
 Rationality to direct that action.
 In taking action motivated by emotion, and directed by rationality Life embodies the Manda.
-We, the Mandalorians, thank the Manda for its' blessings of conflict and change.
-We, the Mandalorians, respect the divine sovereignty of Life to effect positive change.
-We, the Mandalorians, are blessed with Life to effect change.
-We, the Mandalorians, will return this blessing a thousand fold upon the Manda.
+We, thank the Manda for its' blessings of conflict and change.
+We, respect the divine sovereignty of Life to effect positive change.
+We, are blessed with Life to effect change.
+We, will return this blessing a thousand fold upon the Manda.
 ....
